--- a/subscribe.html
+++ b/subscribe.html
@@ -25,7 +25,7 @@
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="theme-color" content="#ffffff">
 <!-- Favicon End -->
-<title>Easyread - Become a Writer</title>
+<title>Subscribe Now! Never Miss Any Updates From Easyread.</title>
 <!-- Bootstrap core CSS -->
 <link href="assets/css/bootstrap.min.css" rel="stylesheet">
 <!-- Fonts -->
